# terrascry

./: .gitignore  CLAUDE.md  IMAGE_GENERATION_PROMPTS.md  LICENSE  LICENSE-HARDWARE.md  LICENSE-SOFTWARE.md  OUTLINE.md  PROJECT_REVIEW.md  README.md  STATUS.md  VISION.md  agents.md  pyproject.toml
.claude/: project-info.md  riper-config.json
.claude/agents/: visualize.md
.claude/rules/: build.md  quarto.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  (+3 more)
_archive/: README.md
docs/: IP-LOG.md  README.md  _quarto.yml  design-concept.md  index.qmd  noise-analysis.md
firmware/: .gitignore  README.md  STRUCTURE.txt  WIRING.md  platformio.ini
geosim/: .gitignore  CLAUDE.md  README.md  __init__.py  server.py
godot/: README.md  project.godot
hirt/: .gitignore  CLAUDE.md  README.md
notebooks/: 01-magnetics-basics.ipynb  02-pathfinder-simulation.ipynb  03-noise-anatomy.ipynb  05-ert-fundamentals.ipynb  07-forensic-and-uxo.ipynb
pathfinder/: .gitignore  CLAUDE.md
platform/: CLAUDE.md  Makefile  README.md
platform/backend/: pyproject.toml
platform/backend/app/: api_models.py  config.py  dataset.py  main.py
platform/backend/app/routers/: anomalies.py  datasets.py  datasets_binary.py  exports.py  imports.py  scenarios.py  streaming.py  surveys.py  ws.py
platform/backend/app/services/: anomaly.py  connection_manager.py  dataset_store.py  import_validator.py  physics.py  streaming.py
platform/backend/tests/: test_anomalies.py  test_datasets.py  test_datasets_binary.py  test_exports.py  test_health.py  test_import_validator.py  test_imports.py  test_scenarios.py  test_streaming.py  test_surveys.py  test_ws.py
platform/backend/tests/fixtures/: invalid_bad_values.csv  invalid_missing_cols.csv  valid_grid.csv  valid_survey.csv
research/: _backlog.md
scenarios/: bomb-crater-heterogeneous.json  clandestine-burial.json  scattered-debris.json  swamp-crash-site.json
shared/: README.md
tests/: test_csv_compatibility.py  test_dipole_model.py  test_em_simpeg.py  test_ert_pygimli.py  test_hirt_validation.py  test_motion_noise.py  test_remanent.py  test_scenario_survey.py  test_zmq_server.py
tools/: test_godot_integration.sh
whitepaper/: .gitignore  MIGRATION_STATUS.md
(+833 files in other folders)
